--- a/references.bib
+++ b/references.bib
@@ -21,7 +21,7 @@
   title={Dynamic programming and optimal control},
   author={Bertsekas, Dimitri P},
   volume={1},
-  edition=3,
+  edition={Third},
   year={2005},
   publisher={Athena Scientific Belmont, MA}
 }
@@ -30,7 +30,7 @@
   title={Dynamic programming and optimal control: Approximate Dynamic Programming},
   author={Bertsekas, Dimitri P},
   volume={2},
-  edition=4,
+  edition={Fourth},
   year={2012},
   publisher={Athena Scientific Belmont, MA}
 }
