--- a/model_uncertainty.tex
+++ b/model_uncertainty.tex
@@ -17,14 +17,16 @@
 
 \listoftodos
 
-\section{Model uncertainty, or miss-specification}\label{sec:markdown_miss_specification}
+\section{Model uncertainty, or
+  miss-specification}\label{sec:markdown_miss_specification}
 It is difficult to correctly model the true underlying disturbance
 $W^\dagger$, and the performance of the policy function should be
 tested to different types of model miss-specification.
 Say the policy functions are calculated based on
-a the system disturbances $W_t\sim \frac{1}{2}+Beta(\mu,\mu)$, where
-$\mu$ is chosen such that $\mathbb E[W]=1$ and $\mbox{std}[W]=\gamma$,
-and consider two cases where the true disturbance is different:
+system disturbances $W_t\sim \frac{1}{2}+Beta(\mu,\mu)$, where
+$\mu$ is chosen such that $\mathbb E[W]=1$ and $\mbox{std}[W]=\gamma$.
+We first consider two cases where the true disturbance is
+different from $W$:
 \begin{enumerate}
 \item Mean miss-specification, $W^\dagger = W-0.05$.
 \item Standard deviation miss-specification, $\gamma^\dagger = 2\gamma$.
@@ -34,8 +36,11 @@ and check the performance of the optimal Bellman policy and the
 Certainty Equivalent Control policy. The results are shown in
 \Cref{fig:markdown_bellman_mpc_model_misspecification}.
 The relative performance of the CEC is drastically reduced when the
-assumed mean is wrong, i.e.\ when a poor quality forecast is taken as
-the truth.
+assumed mean is wrong, that is, when a poor quality forecast is taken as
+the truth. This indicates that, although implementing a CEC policy is
+easier than the optimal policy, the trade-off is that the retailer
+must spend more effort on forecasting and system estimation, and
+update parameter estimates more frequently.
 \begin{figure}[htbp]
   \centering
   \begin{subfigure}[b]{0.5\textwidth}
@@ -75,7 +80,7 @@ the truth.
     \begin{tikzpicture}[trim axis left]
       \begin{axis}[
         width=\textwidth,
-        %         legend style={at={(0.5,0.97)}, anchor=north},
+        % legend style={at={(0.5,0.97)}, anchor=north},
         xlabel=$P^{\alpha^B}-P^{\alpha^C}$,
         ylabel=Count,
         xmin=-0.007, xmax=0.025,
@@ -91,7 +96,7 @@ the truth.
     \begin{tikzpicture}
       \begin{axis}[
         width=\textwidth,
-        %         legend style={at={(0.5,0.97)}, anchor=north},
+        % legend style={at={(0.5,0.97)}, anchor=north},
         xlabel=$P^{\alpha^B}-P^{\alpha^C}$,
         xmin=-0.007, xmax=0.025,
         ymax=500
@@ -102,29 +107,29 @@ the truth.
       \end{axis}
     \end{tikzpicture}
   \end{subfigure}
-  \caption{Performance of the Bellman controller and Certainty
-  Equivalent Control policy under model miss-specification of
-  $W$. Compare with \Cref{fig:markdown_bellman_mpc_5_20_100}.
-  The policy functions are calculated under the assumption that
-  the system disturbance is a translated Beta distribution with mean 1
-  and standard deviation $5\times 10^{-2}$,
-  instead
-  of the true disturbance~$W^\dagger$
-  The CEC policy performance is very dependent on mean miss-specification,
-  as expected.
-}\label{fig:markdown_bellman_mpc_model_misspecification}
-\todo[inline]{Run simulations with beta distributions instead of normals}
+  \caption{Performance of the Bellman and CEC policies under model
+    miss-specification of
+    $W$. Compare with \Cref{fig:markdown_bellman_mpc_5_20_100}.
+    The policy functions are calculated under the assumption that
+    the system disturbance is a translated Beta distribution with mean 1
+    and standard deviation $5\times 10^{-2}$,
+    instead
+    of the true disturbance~$W^\dagger$.
+    The CEC policy performance is very dependent on mean miss-specification,
+    which can be expected.
+  }\label{fig:markdown_bellman_mpc_model_misspecification}
+  \todo[inline]{Run simulations with beta distributions instead of normals}
 \end{figure}
 
 \subsection{Higher-order model uncertainty}
-\todo[inline]{Redo with weird betas instead of chi^2_5?}
+\todo[inline]{Redo with weird betas instead of $\chi^2_5$?}
 The model approximation of the two first moments of the underlying
 disturbance is likely to be more accurate than for higher moments.
 It can therefore be interesting to see how the different
 policies deal with model uncertainty of higher moments.
 We consider affine transformations of a $\chi^2_5$ distribution with five degrees of
 freedom, that have the \emph{same mean and standard deviation as the model
-distribution $W$}. A comparison of the probability density
+  distribution $W$}. A comparison of the probability density
 functions can be seen in \Cref{fig:chisq_transformed}.
 \begin{figure}[htbp]
   \centering
@@ -139,7 +144,7 @@ functions can be seen in \Cref{fig:chisq_transformed}.
         title={Positive skewness}
         ]
         \addplot+[thick] {gammapdf(max((x-0.921)/0.0158,
-        0),2.5,2)/0.0158};
+          0),2.5,2)/0.0158};
         \addlegendentry{$W_1^{\dagger}$};
         \addlegendentry{$W$};
         \addplot+[thick,dashed,domain=0.75:1.25] {gauss(x,1.0,0.05)};
@@ -157,7 +162,7 @@ functions can be seen in \Cref{fig:chisq_transformed}.
         title={Negative skewness}
         ]
         \addplot+[thick] {gammapdf(max((1.079-x)/0.0158,
-        0),2.5,2)/0.0158};
+          0),2.5,2)/0.0158};
         \addlegendentry{$W_2^{\dagger}$};
         \addlegendentry{$W$};
         \addplot+[thick,dashed,domain=0.75:1.25] {gauss(x,1.0,0.05)};
@@ -165,14 +170,16 @@ functions can be seen in \Cref{fig:chisq_transformed}.
     \end{tikzpicture}
   \end{subfigure}
   \caption{Probability density comparisons between
-  the model disturbance $W$ and a true underlying
-  model. A larger positive tail on the left ($W_1^\dagger$) and
-  a larger negative tail on the right ($W_2^\dagger$).
-}\label{fig:chisq_transformed}
+    the model disturbance $W$ and a true underlying
+    model. A larger positive tail on the left ($W_1^\dagger$) and
+    a larger negative tail on the right ($W_2^\dagger$).
+  }\label{fig:chisq_transformed}
 \end{figure}
+Denote the random variable with a positive skew by $W_1^\dagger$, and
+the one with a negative skew by $W_2^\dagger$.
 We again simulate the system with the Bellman and CEC policies 1000
 times, and compare the outomes. The results are shown in
-\cref{fig:markdown_bellman_mpc_chi2}. We see that in the two cases considered,
+\Cref{fig:markdown_bellman_mpc_chi2}. We see that in the two cases considered,
 the relative performance of the CEC controller does not change much
 compared to the case where the assumed uncertainty $W$ is the same as
 the true uncertainty $W^\dagger$.
@@ -216,7 +223,7 @@ the true uncertainty $W^\dagger$.
     \begin{tikzpicture}[trim axis left]
       \begin{axis}[
         width=\textwidth,
-        %         legend style={at={(0.5,0.97)}, anchor=north},
+        % legend style={at={(0.5,0.97)}, anchor=north},
         xlabel=$P^{\alpha^B}-P^{\alpha^C}$,
         ylabel=Count,
         xmin=-0.006, xmax=0.022,
@@ -232,7 +239,7 @@ the true uncertainty $W^\dagger$.
     \begin{tikzpicture}
       \begin{axis}[
         width=\textwidth,
-        %         legend style={at={(0.5,0.97)}, anchor=north},
+        % legend style={at={(0.5,0.97)}, anchor=north},
         xlabel=$P^{\alpha^B}-P^{\alpha^C}$,
         xmin=-0.006, xmax=0.022,
         ymax=600
@@ -243,20 +250,19 @@ the true uncertainty $W^\dagger$.
       \end{axis}
     \end{tikzpicture}
   \end{subfigure}
-  \caption{Performance of Bellman and CEC when the true system disturbances
-  are transformations $W_1^\dagger,W_2^\dagger$ of
-  a $\chi_5^2$ distribution. Compare with the performance in
-  \Cref{fig:bellman_simulation,fig:bellman_det_vals}, when $W=W^\dagger$.
-  The relative performance of CEC compared to Bellman does not
-  change much,
-  although we see a slight deterioration for the under-estimation of
-  skewness (left) and a slight improvement when the skewness has
-  been over-estimated (right).
-}\label{fig:markdown_bellman_mpc_chi2}
-\todo[inline]{Rethink the ``skewness''-descriptions}
+  \caption{Performance of Bellman and CEC policies when the true system disturbances
+    are transformations $W_1^\dagger,W_2^\dagger$ of
+    a $\chi_5^2$ distribution (\Cref{fig:chisq_transformed}).
+    The relative performance of CEC compared to Bellman does not
+    change much,
+    although we see a slight deterioration for the under-estimation of
+    skewness (left) and a slight improvement when the skewness has
+    been over-estimated (right).
+    Compare these results with the performance in
+    \Cref{fig:bellman_simulation,fig:bellman_det_vals}, when $W=W^\dagger$.
+  }\label{fig:markdown_bellman_mpc_chi2}
 \end{figure}
 
-\todo[inline]{Conclude: frequent parameter estimation most important for CEC}
 
 \biblio
 \end{document}
