--- a/introduction.tex
+++ b/introduction.tex
@@ -61,8 +61,8 @@ for both retailers and the environment.
 We are interested in strategies to dynamically set the prices of products, and
 formulate the problem as a stochastic optimal control problem.
 Product stock levels $(S)_t$ are controlled by a pricing process
-$(\alpha)_t$, and evolve according to a dynamic system with disturbances
-$(W)_t$:
+$(\alpha)_t$, and evolve according to a dynamic system with random disturbances
+${(W)}_t$:
 \begin{equation}
 S_{t+1}=f_{t+1}(S_t,\alpha_t,W_{t+1})
 \end{equation}
