--- a/main.tex
+++ b/main.tex
@@ -46,6 +46,9 @@
 % \subfile{expected_utility}
 \subfile{conclusion}
 
+\appendix
+\subfile{appendix_policydiff}
+
 % Bibliography:
 \clearpage
 \bibliographystyle{abbrvnat}
