--- a/bellman_control.tex
+++ b/bellman_control.tex
@@ -56,7 +56,7 @@ The revenue accrued over period $t\to t+1$ is $\alpha_tQ(S_t^\alpha,\alpha_t,W_{
 A cost of remaining stock at time $T$ is modelled by a cost per unit
 stock $C\geq 0$.\footnote{In some situations, unsold items at time $T$
   may be sold at some ``salvage price'', in which case we could allow
-  $C<0$}
+  $C<0$.}
 Let $\mathcal A$ denote the set of feasible processes that take values
 in $A$.
 Define the value of having stock $s$ at time $t\leq T$
@@ -144,8 +144,13 @@ given by
 We assume the exogenous disturbance process is a sequence of
 i.i.d.~shifted Beta-distributed random variables with mean 1 and variance
 $\gamma^2$. That is, we define $W_t\sim \frac{1}{2}+X$, where
-$X\sim Beta(\mu,\nu)$, and
-$\mu=\nu=\frac{1}{8\gamma^2}-\frac{1}{2}$.
+$X\sim Beta(\mu,\nu)$,
+\footnote{A $Beta(\mu,\nu)$ random variable has probability density
+  function on $[0,1]$, given by
+  $p(x)=\frac{x^{\mu-1}{(1-x)}^{\nu-1}}{B(\mu,\nu)}$, with a
+  normalising function $B(\mu,\nu)$.
+}
+and $\mu=\nu=\frac{1}{8\gamma^2}-\frac{1}{2}$.
 
 Set $\gamma = 5\times 10^{-2}$, $C=1$ and $T=3$.
 The solution to the Bellman equation, and the corresponding optimal
@@ -243,7 +248,7 @@ simulating the system 1000 times.
   \begin{subfigure}[t]{0.5\textwidth}
     \begin{tikzpicture}[scale=0.8]
       \begin{axis}[
-        xlabel=$P^\alpha$,
+        xlabel=$P^{\alpha}$,
         ylabel=Count,
         title={Realised profit},
         legend cell align=left
