Paper full draft

--- a/bellman_control.tex
+++ b/bellman_control.tex
@@ -15,7 +15,7 @@
 
 \listoftodos
 
-\section{The optimal control problem}
+\section{The optimal control problem}\label{sec:bellman_optimal_control}
 The overarching goal in the paper is to consider solutions to a retail
 pricing problem.
 \begin{mydef}[Pricing problem, informal]
