--- a/references.bib
+++ b/references.bib
@@ -49,3 +49,45 @@
   year={2001},
   institution={Massachusetts Institute of Technology, Operations Research Center}
 }
+
+@article{bitran1998coordinating,
+  title={Coordinating clearance markdown sales of seasonal products in retail chains},
+  author={Bitran, Gabriel and Caldentey, Rene and Mondschein, Susana},
+  journal={Operations research},
+  volume={46},
+  number={5},
+  pages={609--624},
+  year={1998},
+  publisher={INFORMS}
+}
+
+@article{smith1992yield,
+  title={Yield management at {American Airlines}},
+  author={Smith, Barry C and Leimkuhler, John F and Darrow, Ross M},
+  journal={Interfaces},
+  volume=22,
+  number=1,
+  pages={8--31},
+  year=1992,
+  publisher={INFORMS}
+}
+
+@incollection{aviv2012dynamic,
+  title={Dynamic list pricing},
+  author={Aviv, Yossi and Vulcano, Gustavo},
+  booktitle={The Oxford handbook of pricing management},
+  year={2012},
+  publisher={Oxford University Press},
+  editor={{\"O}zer, {\"O}zalp and Phillips, Robert}
+}
+
+@article{gallego1994optimal,
+  title={Optimal dynamic pricing of inventories with stochastic demand over finite horizons},
+  author={Gallego, Guillermo and Van Ryzin, Garrett},
+  journal={Management science},
+  volume={40},
+  number={8},
+  pages={999--1020},
+  year={1994},
+  publisher={INFORMS}
+}
