--- a/conclusion.tex
+++ b/conclusion.tex
@@ -4,15 +4,41 @@
 
 \listoftodos
 
-\section{Conclusion}
-\begin{itemize}
-\item Summary: pricing problem profit maximisation, investigated
-  performance of algorithms
-\item Shows: expected value optimisation, but different algorithms may
-  create different distributions of profit
-\item Some cases, cec can be a better bet more than half of the time
-\item Robustness to model uncertainty. Point forecasts least stable
-\end{itemize}
+\section{Conclusion}\label{sec:conclusion}
+In this paper we have looked at a mathematical formulation of a
+retail pricing problem for profit maximisation, and investigated the
+performance of different algorithms that balance practicality
+with degree of suboptimality. The motivation is to better understand
+how well the suboptimal policies approximate the returns from the
+optimal policy.
+Pricing problems are often formulated as an expected value
+maximisation, but different algorithms may create different
+distributions of the realised profits.
+So even though the expected value of suboptimal policies are no better
+than the optimal policy, they may have a higher profit for some
+realisations of the underlying uncertainty.
+We found in \Cref{sec:cec_comparison_example} that there are
+reasonable system parameters for which
+the suboptimal Certainty Equivalent Control policy performs better
+than the optimal one in more
+than half of the realisations.
+This underscores the importance of looking at what impact
+different suboptimal algorithms have on the distribution of
+an objective, and not only the impact of
+marginalised statistics like the expected value.
+\todo{Mention model uncertainty?}
+
+The model problem in this paper is fairly simple, and
+we propose two specific lines of research that
+take this analysis closer to practical models.
+First, to investigate multi-product problems where the demand and
+availability of one product depend on the other products.
+Second, to introduce a state dependence on the uncertainty in the
+system, that is to allow $W_{t+1}$ to depend explicitly on the values
+of $S_t$ and $\alpha_t$.
+We hope that these two extensions can get a better understanding of
+whether the effects seen in this paper will be stronger or diluted
+in real-life problems.
 
 \biblio
 \end{document}
