--- a/introduction.tex
+++ b/introduction.tex
@@ -30,7 +30,7 @@ popular in order to advise on and automate the process for companies.
 There are several success stories from early adopters, for example in
 the airline industry. American Airlines estimated in 1992 that
 the introduction of yield management software had, over the preceding
-three years, contributed 500\$ of additional revenue per year,
+three years, contributed \$500 of additional revenue per year,
 and would continue to do so in the future \citep{smith1992yield}.
 In an example from Chilean retail, \citet{bitran1998coordinating}
 report an expected improvement of 7\%-16\% by implementing
